fix: allow scrolling on mobile

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         user-select: none;
         -webkit-user-select: none;
         -webkit-user-drag: none;
-        touch-action: none;
+        touch-action: manipulation;
         transition: all 40ms ease-in-out;
       }
       .form {
